--- a/portfolio.html
+++ b/portfolio.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="./css/normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
-    <header>
+    <header class="container head" >
         <nav>
             <!--logo-->
             <a href="./index.html" class="logo"><span class="accent-logo">Web</span> Studio</a>
@@ -37,14 +36,17 @@
         </address>
     </header>
     <main>
-        <section class="portfolio">
-        <ul class="site-nav list">
-            <li><button type="button" class="portolio-list">Все</button></li>
-            <li><button type="button" class="portolio-list">Веб-сайти</button></li>
-            <li><button type="button" class="portolio-list">Приложения</button></li>
-            <li><button type="button" class="portolio-list">Дизайн</button></li>
-            <li><button type="button" class="portolio-list">Маркетинг</button></li>
+        <section class="portfolio section">
+            <div class="container">
+        <ul class="portf-nav list">
+            <li><button type="button" class="portolio-button">Все</button></li>
+            <li><button type="button" class="portolio-button">Веб-сайти</button></li>
+            <li><button type="button" class="portolio-button">Приложения</button></li>
+            <li><button type="button" class="portolio-button">Дизайн</button></li>
+            <li><button type="button" class="portolio-button">Маркетинг</button></li>
         </ul>
+        </div>
+        <div class="container">
         <ul class="portfolio-foto list">
             <li>
                 <a href="" class="portfolio-link">
@@ -118,11 +120,14 @@
                 </a>
             </li>
         </ul>
+        </div>
         </section>
     </main>
     <footer class="footer">
+        <div class="container">
         <a href="./index.html" class="logo">
-            <span class="accent-logo">Web</span><span class="logo-footer">Studio</span></a>
+            <span class="accent-logo">Web</span><span class="logo-footer">Studio</span></a></div>
+            <div class="container">
     
         <address class="addres">
             <ul class="addres-list list">
@@ -137,6 +142,7 @@
                 </li>
             </ul>
         </address>
+        </div>
     </footer>
 </body>
 </html>
