--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   </head>
   <body>
     <header class="container head">
-      <nav>
+      <div class="main-nav">
+      <nav >
         <!--logo-->
         <a href="./index.html" class="logo"
           ><span class="accent-logo">Web</span> Studio</a
@@ -18,17 +19,16 @@
         <!--Navigation -->
 
         <ul class="site-nav list">
-          <li><a href="./index.html" class="link"> Студія</a></li>
-          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
-          <li><a href="" class="link">Контакти</a></li>
+          <li><a href="./index.html" class="link item"> Студія</a></li>
+          <li><a href="./portfolio.html" class="link item">Портфоліо</a></li>
+          <li><a href="" class="link item">Контакти</a></li>
         </ul>
-      </nav>
-
+        </nav>
       <!--Contacts-->
       <address>
         <ul class="contact list">
           <li>
-            <a href="mailto:info@Devstudio.com:" class="link"
+            <a href="mailto:info@Devstudio.com:" class="link mail"
               >info@Devstudio.com</a
             >
           </li>
@@ -37,6 +37,7 @@
           </li>
         </ul>
       </address>
+      </div>
     </header>
     <main>
       <!--Hiro-->
