--- a/index.html
+++ b/index.html
@@ -51,28 +51,28 @@
           <div class="container">
             <h2 class="section-title">Особенности</h2>
           <ul class="features list">
-            <li>
+            <li class="item">
               <h3 class="title">Внимание к деталям</h3>
               <p class="features-text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="title">Пунктуальность</h3>
               <p class="features-text">
                 Задача организации, в особенности же рамки и место обучения кадров
                 влечет за собой.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="title">Планирование</h3>
               <p class="features-text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="title">Современные технологии</h3>
               <p class="features-text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -87,13 +87,13 @@
         <div class="container"><h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="our-work list">
           <li>
-            <img src="./Image/img(1).png" alt="Наши роботи" width="370" />
+            <img src="./Image/img(1).png" class="img" alt="Наши роботи" width="370" />
           </li>
           <li>
-            <img src="./Image/img(2).png" alt="Наши роботи" width="370" />
+            <img src="./Image/img(2).png" class="img" alt="Наши роботи" width="370" />
           </li>
           <li>
-            <img src="./Image/img(3).png" alt="Наши роботи" width="370" />
+            <img src="./Image/img(3).png" class="img" alt="Наши роботи" width="370" />
           </li>
         </ul></div>
         
