--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,8 @@
 </head>
 <body>
     <header class="container head" >
-        <nav>
+        <div class="main-nav">
+        <nav class="navigation">
             <!--logo-->
             <a href="./index.html" class="logo"><span class="accent-logo">Web</span> Studio</a>
             <!--Navigation -->
@@ -34,6 +35,7 @@
                 </li>
             </ul>
         </address>
+        </div>
     </header>
     <main>
         <section class="portfolio section">
