--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header class="container head">
       <div class="main-nav">
-      <nav >
+      <nav class="navigation">
         <!--logo-->
         <a href="./index.html" class="logo"
           ><span class="accent-logo">Web</span> Studio</a
