--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
       </section>
       <!--Our works-->
       <section class="section">
-        <div class="container"><h2 class="section-title">Чем мы занимаемся</h2>
+        <div class="container" ><h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="our-work list">
-          <li class="photo-item">
+          <li class="photo-item list" >
             <img src="./Image/img(1).png" class="img" alt="Наши роботи" width="370" />
           </li>
           <li class="photo-item">
