--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
     </header>
     <main>
         <section class="portfolio section">
-            <div class="container">
+            <div class="container portf-cont" >
         <ul class="portf-nav list">
             <li class="botton-item"><button type="button" class="portolio-button">Все</button></li>
             <li class="botton-item"><button type="button" class="portolio-button">Веб-сайти</button></li>
