--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <address class="addres">
           <ul class="addres-list list">
             <li class="footer-link">
-              <span class="footer-contact">г. Киев, пр-т Леси Украинки, 26</span>
+              <span class="footer-contact footer-link">г. Киев, пр-т Леси Украинки, 26</span>
             </li>
             <li class="footer-link" >
               <a href="mailto:info@Devstudio.com:" class="footer-contact footer-item">info@Devstudio.com</a>
