--- a/portfolio.html
+++ b/portfolio.html
@@ -51,10 +51,10 @@
         <div class="container">
         <ul class="portfolio-foto list">
             <li class="portf-item">
-                <a href="" class="portfolio-link">
+             <a href="" class="portfolio-link">
                 <img src="./Image/img.jpg" alt="" width="370" height="294">
                     <h2 class="portfolio-work">Технокряк</h2>
-                    <p class="work-section">Веб-сайт</p>     
+                    <p class="work-section">Веб-сайт</p> 
                 </a>
             </li>
             <li class="portf-item">
@@ -125,26 +125,27 @@
         </div>
         </section>
     </main>
-    <footer class="footer">
-        <div class="container">
-        <a href="./index.html" class="logo">
-            <span class="accent-logo">Web</span><span class="logo-footer">Studio</span></a></div>
-            <div class="container">
-    
+<footer class="footer">
+    <div class="container"><a href="./index.html" class="logo">
+            <span class="accent-logo">Web</span><span class="logo-footer">Studio</span></a>
+    </div>
+    <div class="container">
         <address class="addres">
             <ul class="addres-list list">
-                <li>
-                    <span class="footer-contact">г. Киев, пр-т Леси Украинки, 26</span>
+                <li class="footer-link">
+                    <span class="footer-contact footer-link">г. Киев, пр-т Леси Украинки, 26</span>
                 </li>
-                <li>
-                    <a href="mailto:info@Devstudio.com:" class="footer-contact">info@Devstudio.com</a>
+                <li class="footer-link">
+                    <a href="mailto:info@Devstudio.com:" class="footer-contact footer-item">info@Devstudio.com</a>
                 </li>
-                <li>
-                    <a href="tel:+380961111111" class="footer-contact">+38096 111 11 11</a>
+                <li class="footer-link">
+                    <a href="tel:+380961111111" class="footer-contact footer-item">+38096 111 11 11</a>
                 </li>
             </ul>
         </address>
-        </div>
-    </footer>
+    </div>
+
+
+</footer>
 </body>
 </html>
