--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
@@ -19,9 +19,9 @@
         <!--Navigation -->
 
         <ul class="site-nav list">
-          <li><a href="./index.html" class="link item"> Студія</a></li>
-          <li><a href="./portfolio.html" class="link item">Портфоліо</a></li>
-          <li><a href="" class="link item">Контакти</a></li>
+          <li><a href="./index.html" class="link "> Студія</a></li>
+          <li><a href="./portfolio.html" class="link ">Портфоліо</a></li>
+          <li><a href="" class="link ">Контакти</a></li>
         </ul>
         </nav>
       <!--Contacts-->
