--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
             <div class="container portf-cont" >
         <ul class="portf-nav list">
             <li class="botton-item"><button type="button" class="portolio-button">Все</button></li>
-            <li class="botton-item"><button type="button" class="portolio-button">Веб-сайти</button></li>
+            <li class="botton-item"><button type="button" class="portolio-button">Веб-сайты</button></li>
             <li class="botton-item"><button type="button" class="portolio-button">Приложения</button></li>
             <li class="botton-item"><button type="button" class="portolio-button">Дизайн</button></li>
             <li class="botton-item"><button type="button" class="portolio-button">Маркетинг</button></li>
